# pymbrewclient

./: .gitignore  .releaserc.json  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
.github/: COMMIT_CONVENTION.md  PIPELINE_SETUP.md  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/workflows/: pr-acknowledgment.yml  semantic-pr.yml  semantic-release.yml  test-and-release.yml
docs/: API_EXAMPLES.md
src/pymbrewclient/: __init__.py  cli.py  client.py  pymbrewclient.py
src/pymbrewclient/rest/: __init__.py  client.py  models.py
tests/: test_client.py
