[build-system]
requires = ["setuptools>=61.0", "wheel", "build", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[project]
name = "pymbrewclient"
description = "pymbrewclient: A Python library and CLI for readonly access to Minibrew's API"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Stuart Pearson", email = "1926002+stuartp44@users.noreply.github.com"}]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "pydantic>=1.10.17,<3",
    "requests>=2.32.3,<3",
    "loguru>=0.7.2,<1",
    "typer>=0.12.5,<1",
    "rich>=13.9.4,<15",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0,<8",
    "requests-mock>=1.11.0,<2",
    "pytest-cov>=4.1.0,<5",
    "black>=23.9.1,<24",
    "Flask>=2.3.3,<4",
    "ruff>=0.7.2,<1",
    "pre-commit>=4.0.1,<5",
]
build = [
    "build",
    "twine",
]

[project.scripts]
pymbrewclient = "pymbrewclient.cli:app"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=pymbrewclient --cov-report=term-missing --cov-report=xml"

[tool.ruff]
line-length = 120
select = ["E", "F", "ANN", "UP"]
ignore = ["E501", "ANN101"]

[tool.black]
line-length = 120
target-version = ["py312"]
